<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Italian Verbs</string>
    <string name="action_settings">Settings</string>
    <string name="wrong">WRONG!</string>
    <string name="score">Score: %d</string>
    <string name="language_not_supported">Language non supported</string>
    <string name="tts_initilization_failed">Failed to initialize the speak engine</string>
    <string name="need_tts_components">This app needs installation of the speech engine components for the following languages: \'%s\'. At the end of the installation please restart the application.</string>
    <string name="need_voice_recognition_components">This app needs installation of voice recognition components. At the end of the installation please restart the application.</string>
    <string name="need_extension_components">If you want to use additional verbs you have to install the \'Italian Verbs Extension app\', by which you will be able to choose from a database of more than 12000 verbs!</string>
    <string name="speech_locale">en</string>
    <string name="welcome_message">Hello, I\'m miss Puzzy, your crazy teacher of italian. Do you want to study with me?</string>
    <string name="about_msg">This app was written by &lt;a href=\'http://fuoridalsolco.wordpress.com/\'&gt;Marco Perasso&lt;/a&gt; for his sons. Enjoy it!</string>
    <string name="action_information">Information</string>
    <string name="speech_joke_message_locale" translatable="false">it-IT</string>
    <string name="add_verbs">Add&#8230;</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete_verb">Are you sure to delete verb %s?</string>
    <string name="choose_verbs">Choose verbs</string>
    <string name="not_available_yet">Not available</string>
    <string name="reset_original_verbs">Reset original verbs</string>
    <string name="action_verbs">Verbs&#8230;</string>
    <string name="voice_recognition_not_available">Voice recognition not available</string>
    <string name="_missing_" translatable="false">(manca)</string>
    <string name="title_activity_study">Learn Verbs</string>
    <string name="verb">Verb</string>
    <string name="mood">Mood</string>
    <string name="tense">Tense</string>
    <string name="interrogation">Interrogation</string>
    <string name="learn">Lesson</string>
    <string name="later">Later</string>
    <string name="install_now">Install now</string>
    <string name="title_activity_sentences">Sentences for Miss Puzzy</string>
    <string name="delete_sentence">Delete</string>
    <string name="sentences">Sentences</string>
    <string name="use_only_my_sentences">Use only my sentences</string>
    <string name="no_sentences">There are no custom sentences at present, you can add one by using the keyboard, or your voice tapping the microphone button.</string>
    <string name="tell_your_sentence_to_miss_puzzy">Tell your sentence to Miss Puzzy</string>
  <string name="choose_the_verb">Choose the verb</string>
    <string name="download_new_verb">Download new verb</string>
    <string name="please_wait">Please wait&#8230;</string>
    
</resources>