<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/ic_gear_icon"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:icon="@drawable/ic_info"
        android:showAsAction="never"
        android:title="@string/action_information">
    </item>
     <item
        android:id="@+id/action_verbs"
        android:orderInCategory="102"
        android:icon="@drawable/ic_open_book"
        android:showAsAction="never"
        android:title="@string/action_verbs">
    </item> 
 <item
        android:id="@+id/action_sentences"
        android:orderInCategory="103"
        android:icon="@drawable/ic_open_book"
        android:showAsAction="never"
        android:title="@string/sentences">
    </item>
</menu>