<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudyActivity" >

 <TextView
     android:id="@+id/textView1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/spinnerVerb"
     android:layout_alignParentTop="true"
     android:layout_marginTop="22dp"
     android:text="@string/verb" />

 <Spinner
     android:id="@+id/spinnerVerb"
     style="@android:style/Theme.Dialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/spinnerMood"
     android:layout_below="@+id/textView1" />

 <TextView
     android:id="@+id/textView2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/spinnerVerb"
     android:layout_below="@+id/spinnerVerb"
     android:text="@string/mood" />

 <Spinner
     android:id="@+id/spinnerMood"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/textView2"
     android:layout_centerHorizontal="true" />

 <TextView
     android:id="@+id/textView3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/spinnerMood"
     android:layout_below="@+id/spinnerMood"
     android:text="@string/tense" />

 <Spinner
     android:id="@+id/spinnerTense"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/textView3"
     android:layout_below="@+id/textView3" />

 <Button
     android:id="@+id/buttonLearn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/spinnerTense"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="27dp"
     android:text="@android:string/ok" />

</RelativeLayout>
